log
Thu, Apr 17, 2025  6:25:57 PM: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     Map->buckets = Array;
                  ^
hashmap.c:58:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     Map->size = NULL;
               ^
cc1.exe: all warnings being treated as errors
eeef3b7
Thu, Apr 17, 2025  6:28:39 PM: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
b5aca68
